@@ -10,7 +10,7 @@ get_header();
 
 get_template_part( 'content-portfolio' );
 	
-if ( !of_get_option('portfolio_sidebar') )
+if ( !of_get_option( 'portfolio_sidebar' ) )
 	get_sidebar();
 
 get_footer();
