@@ -3,6 +3,8 @@ Portfolio Press 0.9
 - Paging bug fixes for portfolio items
 - Fix for blockquote missing image
 - Removed portfolio post type code
+- Replaced portfolio taxonomy templates with archive-portfolio
+- Renamed loop.php to content.php
 
 Portfolio Press 0.8
 
